--- a/README
+++ b/README
@@ -1,15 +1,15 @@
 
-    MagSales
+    MagVendo
     --------
 
-MagSales is a web app written in PHP for management of sales 
+MagVendo is a web app written in PHP for management of sales 
 for a particular company (which requested not to be mentioned here)
 and which is a client of SV-TI.
 
     License
     --------
 
-MagSales is free software: you can redistribute it and/or modify
+MagVendo is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
